# cqrs

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  QUICKSTART.md  README.md  REQUIREMENTS.md  RUST_ROADMAP.md  TECH_COMPARISON.md  docker-compose.yml
crates/common/: Cargo.toml
crates/common/src/: circuit_breaker.rs  config.rs  errors.rs  lib.rs  metrics.rs  telemetry.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  lib.rs
crates/domain/src/aggregates/: order.rs
crates/domain/src/commands/: mod.rs  order_commands.rs
crates/domain/src/events/: inventory_events.rs  mod.rs  order_events.rs  payment_events.rs
crates/domain/src/value_objects/: mod.rs
crates/event-store/: Cargo.toml
crates/event-store/src/: idempotency.rs  lib.rs  postgres_event_store.rs  replay.rs
crates/messaging/: Cargo.toml
crates/messaging/src/: consumer.rs  lib.rs  producer.rs
crates/read-model/: Cargo.toml
crates/read-model/src/: lib.rs
crates/read-model/src/cache/: mod.rs  redis_cache.rs
crates/read-model/src/projections/: mod.rs  order_projection.rs
crates/read-model/src/repositories/: mod.rs  order_view_repository.rs
crates/saga/: Cargo.toml
crates/saga/src/: coordinator.rs  errors.rs  lib.rs  repository.rs  saga.rs  step.rs
docs/: DEVELOPMENT.md  PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  PHASE5.md
migrations/: 001_create_events_table.sql  002_create_snapshots_table.sql  003_create_order_views_table.sql  004_create_saga_tables.sql
services/command-service/: Cargo.toml
services/command-service/src/: main.rs  routes.rs  state.rs
services/command-service/src/handlers/: cancel_order.rs  confirm_order.rs  create_order.rs  deliver_order.rs  health.rs  mod.rs  ship_order.rs
services/projection-service/: Cargo.toml
services/projection-service/src/: event_processor.rs  main.rs
services/query-service/: Cargo.toml
services/query-service/src/: main.rs  routes.rs  state.rs
services/query-service/src/handlers/: get_by_number.rs  get_order.rs  health.rs  list_by_status.rs  list_customer_orders.rs  mod.rs
services/saga-orchestrator/: Cargo.toml
services/saga-orchestrator/src/: event_consumer.rs  main.rs
services/saga-orchestrator/src/sagas/: mod.rs  order_saga.rs
tests/integration/: command_service_tests.rs  event_store_tests.rs  mod.rs  phase5_tests.rs  read_model_tests.rs  saga_tests.rs
