[workspace]
members = [
    "crates/domain",
    "crates/event-store",
    "crates/messaging",
    "crates/read-model",
    "crates/saga",
    "crates/common",
    "services/command-service",
    "services/query-service",
    "services/projection-service",
    "services/saga-orchestrator",
]

resolver = "2"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Web Framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json"] }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# UUID & Time
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-jaeger = { version = "0.20", features = ["rt-tokio"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# Circuit Breaker & Resilience
# Using a simple custom implementation instead of failsafe

# Validation
validator = { version = "0.18", features = ["derive"] }

# Utilities
async-trait = "0.1"
dotenv = "0.15"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Testing
mockall = "0.12"
tokio-test = "0.4"
