[package]
name = "messaging"
version = "0.1.0"
edition = "2021"

[dependencies]
rdkafka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
