[package]
name = "saga"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# UUID & Time
uuid = { workspace = true }
chrono = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Local dependencies
domain = { path = "../domain" }
common = { path = "../common" }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
