[package]
name = "projection-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "projection-service"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }

# Local crates
domain = { path = "../../crates/domain" }
messaging = { path = "../../crates/messaging" }
read-model = { path = "../../crates/read-model" }
common = { path = "../../crates/common" }

# Signal handling
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
futures-util = "0.3"
