[package]
name = "query-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "query-service"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Local crates
domain = { path = "../../crates/domain" }
read-model = { path = "../../crates/read-model" }
common = { path = "../../crates/common" }
