[package]
name = "saga-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# Kafka
rdkafka = { workspace = true }

# UUID & Time
uuid = { workspace = true }
chrono = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Config
dotenv = { workspace = true }

# Utilities
async-trait = { workspace = true }

# Local dependencies
domain = { path = "../../crates/domain" }
saga = { path = "../../crates/saga" }
messaging = { path = "../../crates/messaging" }
common = { path = "../../crates/common" }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
